--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "i": "^0.3.7",
     "next": "14.2.3",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-redux": "^9.1.2"
   },
