--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "roughjs": "^4.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
