--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "next": "14.2.3",
     "npm": "^10.8.1",
+    "perfect-freehand": "^1.2.2",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.9.0",
