--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "i": "^0.3.7",
+    "lottie-web": "^5.12.2",
     "next": "14.2.3",
     "npm": "^10.8.1",
     "perfect-freehand": "^1.2.2",
