--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "roughjs": "^4.6.6"
+    "roughjs": "^4.6.6",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
