--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/font": "^14.2.4",
     "@reduxjs/toolkit": "^2.2.5",
     "i": "^0.3.7",
     "lottie-web": "^5.12.2",
