--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.5",
     "i": "^0.3.7",
     "lottie-web": "^5.12.2",
@@ -23,6 +24,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-transition-group": "^4.4.5",
     "roughjs": "^4.6.6",
     "uuid": "^10.0.0"
   },
@@ -31,6 +33,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.10",
     "@types/uuid": "^9.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
